--- a/src/components/Marquee.css
+++ b/src/components/Marquee.css
@@ -4,7 +4,7 @@
     width: 100%;
     overflow: hidden;
     white-space: nowrap;
-    font-size: 0.25rem; 
+    font-size: 1.25rem; 
     color: #333;
     background-color: #d8d8d8;
     text-align: center;
@@ -17,7 +17,7 @@
     display: inline-block;
     padding-left: 100%; 
     animation: marquee-animation 30s linear infinite;
-    font-size: 0.25rem; 
+    font-size: 1.25rem; 
     white-space: nowrap;
   }
   
@@ -32,7 +32,7 @@
   
   @media (min-width: 640px) {
     .marquee-text {
-      font-size: 1.25rem;
+      font-size: .25rem;
     }
   
     .marquee-text span {
