--- a/src/components/Marquee.css
+++ b/src/components/Marquee.css
@@ -6,7 +6,8 @@
     white-space: nowrap;
     font-size: 1.25rem; 
     color: #333;
-    background-color: #d8d8d8;
+    font-weight: 600;
+    background-color: #b0d0bd;
     text-align: center;
     padding: 3px 0;
     box-sizing: border-box;
