--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 .custom-grid {
-    grid-template-columns: 300px 1fr; 
+    grid-template-columns: 300px 1fr 1fr; 
 }
 
 @media (max-width: 640px) {
     .custom-grid {
-        grid-template-columns: 150px 1fr; 
+        grid-template-columns: 100px 1fr 1fr; 
     }
 }
